Added dedicated server support - Repair will not add missing player to dedicated server. Distances measured to origin (0,0,0) when no player exists. Dedicated Service Server game denied write access unless run as Admin. Additional information in Load dialog.

--- a/Main/SEToolbox/SEToolbox/Views/ControlSaveState.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlSaveState.xaml
@@ -24,7 +24,7 @@
             </Border.Background>
             <Grid Margin="4,0,4,0">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Unsaved" ToolTip="Your content has been changed, and not yet saved." Foreground="Red" />
+                    <TextBlock Text="Unsaved" ToolTip="Your content has been changed, and not yet saved." Foreground="Black" />
                 </StackPanel>
             </Grid>
         </Border>
